--- a/basic-tap-selection.html
+++ b/basic-tap-selection.html
@@ -25,10 +25,19 @@ Polymer({
   is: 'basic-tap-selection',
 
   ready: function() {
-    this.addEventListener('click', function(event) {
+    /*
+     * REVIEW: Which event should we listen to here?
+     *
+     * The standard use for this aspect is in list boxes. List boxes don't
+     * appear to be consistent with regard to whether they select on mousedown
+     * or click/mouseup.
+     */
+    this.addEventListener('mousedown', function(event) {
       this._selectElement(event.target);
-      // event.stopPropagation();
-      // return false;
+      // Note: We don't call preventDefault here. The default behavior for
+      // mousedown includes setting keyboard focus if the element doesn't
+      // already have the focus, and we want to preserve that behavior.
+      event.stopPropagation();
     }.bind(this));
   },
 
